<resources>
    <string name="app_name">Bill Calculator</string>
    <string name="btnStart">Start</string>
    <string name="logo">Logo</string>
    <string name="help">help</string>
    <string name="calc">calculate</string>
    <string name="input1">Enter bill total</string>
    <string name="input2">Choose tip</string>
    <string name="input3">Split between</string>
    <string name="tip1">10%</string>
    <string name="tip2">20%</string>
    <string name="tip3">No Tip</string>
    <string name="result1">Total per person</string>
    <string name="result2">Bill</string>
    <string name="result3">Tip</string>
    <string name="hint1">Please enter total bill amount here</string>
    <string name="hint2">Please enter total no of pax here</string>
    <string name="helppage">Bill Calculator splits the bill fast, great for dining and drinks with friends!</string>
    <string name="instruction1">1) Enter the total bill, select desired tip amount, and number of persons to split the bill with.</string>
    <string name="instruction2">2) Select the calculate button.</string>
    <string name="instruction3">3) The results are shown and is ready for you to use again and again!</string>
    <string name="btngetS">Get Started Now</string>
    <string name="background">background</string>
</resources>