<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="160dp"
    android:paddingBottom="16dp"
    android:background="#e1eded"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/home" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"/>

    <Button
        android:backgroundTint="#b2bcbc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStart"
        android:id="@+id/btnStart"
        android:layout_below="@+id/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/help"
        android:layout_margin="20dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/help"
        android:src="@drawable/help" />


</RelativeLayout>